# synthlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXES.md  INSTALL.md  INSTALLER.md  LICENSE  PRODUCTION_READY_REPORT.md  PROJECTS_VERIFIED.md  README.md  RUST_IMPLEMENTATION.md  TEST_REPORT.md  build.rs  install.sh  installer.nsi  main.py  pyproject.toml  setup.py  slang.spec  verify.py  write_rust.bat
.agency-all/: project_manager.md  prompter.md
colors/: README.md  synthlang.desktop  synthlang.xml
docs/: architecture.md  backends.md  design_notes.md  ffi.md  go_core.md  grammar.md  syntax.md  tutorial.md  usage.md
examples/: cli_tool.sl  controlflow.sl  discord_bot.sl  game.sl  web_server.sl
projects/cli1/: README.md  (+1 more)
rust_src/: ir.rs
scratch/: test_parse.py
scripts/: build_exe.py  clean.sh  installer.py  slang_cli.py
std/: README.md  crypto.sl  discord.sl  env.sl  fs.sl  http.sl  image.sl  io.sl  network.sl  process.sl
tests/: __init__.py  test_aot.py  test_build.py  test_channels.py  test_cli.py  test_compiler.py  test_concurrency.py  test_controlflow.py  test_error_handling.py  test_examples.py  test_ffi.py  test_ffi_languages.py  test_ffi_python.py  test_formatter.py  test_gc.py  test_go_ffi.go  test_go_integration.py  test_inline_code.sl  test_integration.py  test_interpreter.py  test_ir.py  test_ir_cache.py  test_lexer.py  test_lsp.py  test_parser.py  test_performance.py  test_runner.py  test_rust_core.rs  test_scheduler.py  test_sl_runner.py  test_type_inference.py  test_vm.py
vibecoders/: SKILL.md
vscode-synthlang/: package.json
(+168 files in other folders)
