[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "synthlang"
version = "1.0.0"
description = "SynthLang - A modern polyglot programming language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SynthLang Team", email = "team@synthlang.dev"}
]
classifiers = [
    "Development Status :: 5 - Production",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# Rust core extension module (requires Rust toolchain)
synthlang-core = []

# Go FFI for concurrency (requires Go toolchain)
libgoffi = []

[project.scripts]
slang = "synthlang.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
strip = true
release = true